test/compile-fail/decl__fn.he
fn main
{
    fn blah () { ret 0; }
    fn blah () { ret 0; } //~ ERROR 3014
}

/* fn blah() {} */
